force-app/main/default/objects/Copado_Notification__c/Copado_Notification__c.object-meta.xml
<CustomObject>
    <description>Used for Copado Notifications using the Streaming API.</description>
    <label>Copado Notification</label>
    <nameField>
        <label>CopadoNotification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>