force-app/main/default/objects/Copado_Notification__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <externalId>true</externalId>
    <label>AttachmentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>