force-app/main/default/objects/Copado_Notification__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>TextArea</type>
</CustomField>